# labelize

./: AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.windows  README.md  build-windows.sh  docker-compose.yaml
.github/workflows/: ci.yml  release.yml
e2e/sdk/: Cargo.toml
src/: lib.rs  main.rs
testdata/diffs/: diff_report_unit.txt
tests/: e2e_diff_report.rs  e2e_labelary.rs  unit_golden_png_dimensions.rs  unit_property_tests.rs
tests/common/: render_helpers.rs
